fix: hide details marker on safari

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,10 @@ code {
     monospace;
 }
 
+summary::-webkit-details-marker {
+  display: none !important;
+}
+
 /* react-datepicker */
 
 .react-datepicker {
